--- a/projectweb/templates/base.html
+++ b/projectweb/templates/base.html
@@ -29,6 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../../course/category">Category</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../student/student">Student</a>
+                    </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
