--- a/student/templates/student/student/student_add.html
+++ b/student/templates/student/student/student_add.html
@@ -5,10 +5,9 @@
     {% csrf_token %}
     {{form}}
 
-    <div class="mt-4">
-        <button class="btn btn-success" type="submit">Add</button>
-    </div>
 </form>
-
-<a class="btn btn-warning" href="back_to_studentlist">Back to list</a>
+<div style="margin-top: 10px">
+    <button class="btn btn-success" type="submit">Add</button>
+    <a class="btn btn-warning" href="back_to_studentlist">Back to list</a>
+</div>
 {% endblock content %}
