--- a/course/templates/course/classroom/classroom_add.html
+++ b/course/templates/course/classroom/classroom_add.html
@@ -4,9 +4,8 @@
 <form method="POST">
     {% csrf_token %}
     {{form}}
-
-    <div class="mt-4">
-        <button class="btn btn-success" type="submit">Edit</button>
+    <div>
+        <button class="btn btn-success" type="submit">Add</button>
         <a class="btn btn-warning" href="back_to_categorylist">Back to list</a>
     </div>
 </form>
