--- a/projectweb/templates/base.html
+++ b/projectweb/templates/base.html
@@ -30,6 +30,9 @@
                         <a class="nav-link" href="../../course/category">Category</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="../../course/classroom">Class</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="../../student/student">Student</a>
                     </li>
                 </ul>
