--- a/student/templates/student/student/student_index.html
+++ b/student/templates/student/student/student_index.html
@@ -7,6 +7,7 @@
     <tr>
         <th>Student_Code</th>
         <th>Name</th>
+        <th>ClassRoom</th>
         <th>Course</th>
         <th></th>
     </tr>
@@ -16,6 +17,7 @@
         <td>{{item.student_code}}</td>
         <td>{{item.name}}</td>
         <td>{{item.course}}</td>
+        <td>{{item.classroom}}</td>
         <td>
             <a href="{{item.id}}" class="btn btn-sm btn-warning">Details</a>
             <a href="edit/{{item.id}}" class="btn btn-sm btn-primary">Edit</a>
