--- a/course/templates/course/category/category_add.html
+++ b/course/templates/course/category/category_add.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 <form method="POST">
     {% csrf_token %}
     {{form}}
