--- a/course/templates/course/classroom/classroom_add.html
+++ b/course/templates/course/classroom/classroom_add.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 <form method="POST">
     {% csrf_token %}
     {{form}}
     <div>
         <button class="btn btn-success" type="submit">Add</button>
-        <a class="btn btn-warning" href="back_to_categorylist">Back to list</a>
+        <a class="btn btn-warning" href="back_to_classroomlist">Back to list</a>
     </div>
 </form>
 
