--- a/course/templates/course/course/course_add.html
+++ b/course/templates/course/course/course_add.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-<link rel="stylesheet" href="% static 'css/index.css' %">
 <form method="POST">
     {% csrf_token %}
     {{form}}
