--- a/projectweb/templates/base.html
+++ b/projectweb/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,32 +14,37 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Home</a>
+            <a href="../../home/">
+                <img src="{% static 'img/PTK.png' %}" alt="" class="logo">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 main-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../../course/course">Course</a>
+                        <a style="color:white" class="nav-link" href="../../home/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../course/category">Category</a>
+                        <a style="color:white" class="nav-link" href="../../course/course">Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../course/classroom">Class</a>
+                        <a style="color:white" class="nav-link" href="../../course/category">Category</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../student/student">Student</a>
+                        <a style="color:white" class="nav-link" href="../../course/classroom">Class</a>
+                    </li>
+                    <li class="nav-item">
+                        <a style="color:white" class="nav-link" href="../../student/student">Student</a>
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <input class="form-control me-2 srch" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success bt" type="submit">Search</button>
                 </form>
             </div>
         </div>
@@ -46,6 +52,7 @@
 
     <div class="container mt-4">
         {% block content %}
+        <link rel="stylesheet" href="{% static 'css/index.css' %}">
         {% endblock%}
     </div>
 
