--- a/student/templates/student/student/student_details.html
+++ b/student/templates/student/student/student_details.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 <table class="table">
     <tr>
         <th>Student_Code</th>
