--- a/course/templates/course/classroom/classroom_index.html
+++ b/course/templates/course/classroom/classroom_index.html
@@ -8,6 +8,7 @@
 
 <table class="table">
     <tr>
+        <th>No. </th>
         <th>Name</th>
         <th>Category</th>
     </tr>
@@ -15,6 +16,7 @@
     {% for item in classes %}
 
     <tr>
+        <td>{{forloop.counter}}</td>
         <td>{{item.name}}</td>
         <td>{{item.category}}</td>
         <td>
