--- a/projectweb/templates/base.html
+++ b/projectweb/templates/base.html
@@ -27,19 +27,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 main-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../../home/">Home</a>
+                        <a href="../../home/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../course/category">Category</a>
+                        <a href="../../course/category">Category</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../course/course">Course</a>
+                        <a href="../../course/course">Course</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../course/classroom">Class</a>
+                        <a href="../../course/classroom">Class</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../student/student">Student</a>
+                        <a href="../../student/student">Student</a>
                     </li>
                 </ul>
                 <form class="d-flex">
