--- a/projectweb/templates/base.html
+++ b/projectweb/templates/base.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Document</title>
+    <title>Student Management</title>
 </head>
 
 <body>
@@ -40,6 +40,9 @@
                     </li>
                     <li class="nav-item">
                         <a href="../../student/student">Student</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="../../student/result">Mark Report</a>
                     </li>
                 </ul>
                 <form class="d-flex">
