Thinh 29/04 làm xong contract và footer

--- a/course/templates/course/home.html
+++ b/course/templates/course/home.html
@@ -6,8 +6,10 @@
 
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-<h1 class="abc">
-    tạm thời là làm header trc nha!!!
+{% comment %} main {% endcomment %}
+
+<h1>
+    Chỗ này làm body(main)
 </h1>
     
 {% endblock content %}
