--- a/course/static/css/style.css
+++ b/course/static/css/style.css
@@ -38,3 +38,85 @@
     background-color: white;
     border-radius: 10px;
 }
+/*------------- main -------------*/
+
+
+
+/*------------- contract section -------------*/
+.foot_contain{
+    display: flex;
+}
+.box1, .box2, .box3{
+    flex: 25%;
+}
+.contract_section{
+    background-color: #F9E6E6;
+    height: 300px;
+}
+h4{
+    padding-top: 50px;
+}
+.about{
+    list-style: none;
+    padding-top: 20px;
+    line-height: 200%;
+    font-weight: 500;
+    text-align: center;
+}
+.information{
+    list-style: none;
+    padding-top: 20px;
+    line-height: 300%;
+    word-spacing: 1px;
+    font-size: 95%;
+    font-weight: 500;
+}
+.information li{
+    text-align: center;
+}
+.information h4{
+    text-align: center;
+}
+.small_icon{
+    font-size: 130%;
+    margin-right: 20px;
+}
+.information .small_icon:hover,
+.information .small_icon:active{
+    transform: scale(1.3);
+}
+.social_icons{
+    list-style: none;
+    margin-top: 20px;
+    margin-right: 20px;
+    text-align: center;
+}
+.social_icons li{
+    display: inline-block;
+    font-size: 225%;
+    margin-right: 20px;
+    cursor: pointer;
+}
+.social_icons li i{
+    transition: all 0.5s;
+}
+.social_icons li i:hover,
+.social_icons li i:active{
+    transform: scale(1.3);
+    color: #e74c3c;
+}
+.social_icons h4{
+    text-align: center;
+}
+
+
+/*------------- footer -------------*/
+.footer{
+    text-align: center;
+    background-color: #fab1a0;
+    color: black;
+    padding-top: 20px;
+    padding-bottom: 5px;
+    font-weight: bold;
+    font-size: 15px;
+}
