--- a/projectweb/templates/base.html
+++ b/projectweb/templates/base.html
@@ -59,6 +59,70 @@
         {% endblock%}
     </div>
 
+    <section class="contract_section">
+        <div class="foot_contain">
+            
+            <div class="box1">
+                <ul class="social_icons">
+                    <h4>Social</h4>
+                    <li>
+                        <i class="fa fa-facebook-square"></i>
+                    </li>
+                    <li>
+                        <i class="fa fa-instagram"></i>
+                    </li>
+                    <li>
+                        <i class="fa fa-twitter-square"></i>
+                    </li>
+                    <li>
+                        <i class="fa fa-google-plus-square"></i>
+                    </li>
+                </ul>
+            </div> 
+
+            <div class="box2">
+                <ul class="information">
+                    <h4>Contract Us</h4>
+                    <li>
+                        <i class="fa fa-map-marker-alt small_icon"></i> Address: 99/99, Earth, Ho Chi Minh city
+                    </li>
+                    <li>
+                        <i class="fa fa-envelope small_icon"></i> Email: PTK_team@gmail.com
+                    </li>
+                    <li>
+                        <i class="fa fa-phone small_icon"></i> Hotline : (+84) 9999-999-999
+                    </li>
+                </ul>
+            </div> 
+            
+            <div class="box3">
+                <ul class="about">
+                    <h4>About Us</h4>
+                    <li>
+                        <i></i>About
+                    </li>
+                    <li>
+                        <i></i>Help
+                    </li>
+                    <li>
+                        <i></i>Privacy Policy
+                    </li>
+                    <li>
+                        <i></i>Terms of Service
+                    </li>   
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p>
+            Copyright &copy; 2022 by SELF-TAUGHT TEAM
+        </p>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/1e6aeb52e4.js" crossorigin="anonymous"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
         </script>
