--- a/projectweb/templates/base.html
+++ b/projectweb/templates/base.html
@@ -9,7 +9,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="shortcut icon"
+        href="https://cdn.discordapp.com/attachments/963626771431948308/969460978230108180/pngegg.png"
+        type="image/x-icon">
     <title>Student Management</title>
 </head>
 
@@ -47,7 +49,9 @@
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2 srch" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success bt" type="submit">Search</button>
+                    <button class="btn btn-outline-success bt" type="submit">
+                        <ti class="ti-search"></ti>
+                    </button>
                 </form>
             </div>
         </div>
