--- a/course/static/css/style.css
+++ b/course/static/css/style.css
@@ -38,32 +38,40 @@
     background-color: white;
     border-radius: 10px;
 }
+
 /*------------- main -------------*/
 
 
 
 /*------------- contract section -------------*/
-.foot_contain{
+.foot_contain {
     display: flex;
 }
-.box1, .box2, .box3{
+
+.box1,
+.box2,
+.box3 {
     flex: 25%;
 }
-.contract_section{
+
+.contract_section {
     background-color: #F9E6E6;
     height: 300px;
 }
-h4{
+
+h4 {
     padding-top: 50px;
 }
-.about{
+
+.about {
     list-style: none;
     padding-top: 20px;
     line-height: 200%;
     font-weight: 500;
     text-align: center;
 }
-.information{
+
+.information {
     list-style: none;
     padding-top: 20px;
     line-height: 300%;
@@ -71,47 +79,60 @@ h4{
     font-size: 95%;
     font-weight: 500;
 }
-.information li{
+
+.information li {
     text-align: center;
 }
-.information h4{
+
+.information h4 {
     text-align: center;
 }
-.small_icon{
+
+.small_icon {
     font-size: 130%;
     margin-right: 20px;
 }
+
 .information .small_icon:hover,
-.information .small_icon:active{
+.information .small_icon:active {
     transform: scale(1.3);
 }
-.social_icons{
+
+.social_icons {
     list-style: none;
     margin-top: 20px;
     margin-right: 20px;
     text-align: center;
 }
-.social_icons li{
+
+.social_icons li {
     display: inline-block;
     font-size: 225%;
     margin-right: 20px;
     cursor: pointer;
 }
-.social_icons li i{
+
+.social_icons li i {
     transition: all 0.5s;
 }
+
 .social_icons li i:hover,
-.social_icons li i:active{
+.social_icons li i:active {
     transform: scale(1.3);
     color: #e74c3c;
 }
-.social_icons h4{
+
+.social_icons h4 {
     text-align: center;
+}
+
+.content {
+    height: 1000px;
 }
 
 
 /*------------- footer -------------*/
-.footer{
+.footer {
     text-align: center;
     background-color: #fab1a0;
     color: black;
