--- a/projectweb/templates/base.html
+++ b/projectweb/templates/base.html
@@ -50,14 +50,14 @@
                 <form class="d-flex">
                     <input class="form-control me-2 srch" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success bt" type="submit">
-                        <ti class="ti-search"></ti>
+                        <i class="fa-solid fa-magnifying-glass"></i>
                     </button>
                 </form>
             </div>
         </div>
     </nav>
 
-    <div class="container mt-4">
+    <div class="container mt-4 content">
         {% block content %}
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         {% endblock%}
@@ -65,7 +65,6 @@
 
     <section class="contract_section">
         <div class="foot_contain">
-            
             <div class="box1">
                 <ul class="social_icons">
                     <h4>Social</h4>
@@ -82,7 +81,7 @@
                         <i class="fa fa-google-plus-square"></i>
                     </li>
                 </ul>
-            </div> 
+            </div>
 
             <div class="box2">
                 <ul class="information">
@@ -97,8 +96,8 @@
                         <i class="fa fa-phone small_icon"></i> Hotline : (+84) 9999-999-999
                     </li>
                 </ul>
-            </div> 
-            
+            </div>
+
             <div class="box3">
                 <ul class="about">
                     <h4>About Us</h4>
@@ -113,7 +112,7 @@
                     </li>
                     <li>
                         <i></i>Terms of Service
-                    </li>   
+                    </li>
                 </ul>
             </div>
         </div>
