--- a/projectweb/templates/base.html
+++ b/projectweb/templates/base.html
@@ -50,7 +50,7 @@
                 <form class="d-flex">
                     <input class="form-control me-2 srch" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success bt" type="submit">
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa fa-search"></i>
                     </button>
                 </form>
             </div>
