--- a/course/static/css/style.css
+++ b/course/static/css/style.css
@@ -65,7 +65,7 @@
 /* id */
 
 #main_1{
-    background-color: #a29bfe;
+    background-color: #ffeaa7;
 }
 
 #main_2{
@@ -179,7 +179,7 @@ h4 {
 .social_icons li i:hover,
 .social_icons li i:active {
     transform: scale(1.3);
-    color: #e74c3c;
+    color: #0984e3;
 }
 
 .social_icons h4 {
@@ -187,7 +187,7 @@ h4 {
 }
 
 .content {
-    height: 1000px;
+    height: 100vh;
 }
 
 
