--- a/projectweb/templates/base.html
+++ b/projectweb/templates/base.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 main-nav">
                     <li class="nav-item">
-                        <a href="../../home/">Home</a>
+                        <a href="../../home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="../../course/category">Category</a>
@@ -50,12 +50,11 @@
                         <a href="../../student/result">Mark Report</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2 srch" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success bt" type="submit">
-                        <i class="bi bi-search"></i>
+                <a href=" ../../student/student/login">
+                    <button class="btn btn-outline-success bt">
+                        <i class="bi bi-person-circle"></i>
                     </button>
-                </form>
+                </a>
             </div>
         </div>
     </nav>
