--- a/course/templates/course/home.html
+++ b/course/templates/course/home.html
@@ -9,7 +9,7 @@
 {% comment %} main {% endcomment %}
 
 <h1 class="topic">
-    Student Management Systemm
+    Student Management System
 </h1>
 <div class="container mt-3">
     <div class="row card-list">
